# lib/db/src/schema/wallets.ts
@@ -10,6 +10,8 @@ export const walletsTable = pgTable("wallets", {
   currency: text("currency").notNull().default("NGN"),
   virtualAccountNumber: varchar("virtual_account_number", { length: 20 }),
   virtualAccountBank: varchar("virtual_account_bank", { length: 100 }),
+  paystackAccountNumber: varchar("paystack_account_number", { length: 20 }),
+  paystackAccountBank: varchar("paystack_account_bank", { length: 100 }),
   updatedAt: timestamp("updated_at").notNull().defaultNow(),
 });
 
